[package]
name = "armfb"
version = "0.1.0"
edition = "2021"
description = "ARM 32/64 bit frambuffer graphics"

[lib]
crate-type = ["staticlib"]

[dependencies]
fb = { path = "../../fb/" }
libcolor = { path = "../../../lib/libcolor/" }
nmallocator = { path = "../../../mm/nmallocator/" }
novuskinc = { path = "../../../include/novusk/", features = ["library"] }
printk = { path = "../../../kernel/printk/" }
