[package]
name = "armfb"
version = "0.1.0"
edition = "2021"
description = "ARM 32/64 bit frambuffer graphics"
license = "MIT"
publish = false

[dependencies]
fb = { path = "../../fb/" }
libcolor = { path = "../../../lib/libcolor/" }
novuskinc = "0.1.1"
printk = { path = "../../../kernel/printk/" }
rpi = { path = "../../rpi/" }
